Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.6.0-rc1
-
Ubuntu 16.04 LTS
Windows
Description
- Open a project which contains a .cpp file and a resource (.qrc) file.
- Right-click on the .cpp file and select "Rename..." from the context menu.
Only the file's base name will be selected so the user does not accidentally change the extension.
By the way: I like this new feature. Thank you for that! - Press Escape.
- Right-click on the resource file and select "Rename..." from the context menu.
The whole file name including the extension will be selected.
Also for resource files, only the file's base name should be selected.
Found by Squish test tst_rename_file.